# examples

./: .gitignore  .gitmodules  README.md  netlify.toml
20180413-tdd-and-mob/: LICENSE  README.md  practice.cabal
20180413-tdd-and-mob/src/: Odai_1.hs  Odai_2.hs  Odai_2_1.hs  Odai_2_2.hs  Odai_2_3.hs  Odai_2_4.hs
20180413-tdd-and-mob/test/: Odai_1Spec.hs  doctest-discover.hs
ansible-module-check-and-diff/version1/: simplefile.py
ansible-module-check-and-diff/version2/: simplefile.py
ansible-module-check-and-diff/version3/: simplefile.py
delimited-continuation/: Example.hs  README.md  delimited-continuation.cabal
distributed-rabbitmq-brokers/: .gitignore  Vagrantfile  provision.sh  start-cluster.sh  stop-cluster.sh
distributed-rabbitmq-brokers/ansible/: rabbitmq.config  rabbitmq.yml
distributed-rabbitmq-brokers/scripts/: federated-exchange-downstream.rb  federated-exchange-upstream.rb  federated-queue-downstream.rb  federated-queue-upstream.rb  ha-consumer.rb  ha-publisher.rb
docs/: config.toml
docs/content/: _index.md
docs/content/docs/: _index.md  examples.md  getting-started.md
docs/layouts/partials/: sub-footer.html
haskell-io-test/: 13chars.txt  MockServer.hs  ReadFile.hs  haskell-io-test.cabal
haskell-servant-webapp/: .gitignore  README.md  haskell-servant-webapp.cabal  spec.md
haskell-servant-webapp/src/: Main.hs
hello_macro-in-rust/: Cargo.toml  README.md
hello_macro-in-rust/hello_macro_derive/src/: lib.rs
jni-load-test/: .gitignore  Dockerfile  README.md  build.sh
jni-load-test/lib/: V1.c  V2.c
jni-load-test/src/: App.java  V1.java  V2.java
message-to-command/: .gitignore  Pipfile  README.md  helpers.py  model.py  preprocess.py  requirements.in  requirements.txt  test.py  train.py
minimal-uefi-app/: .gitignore  Cargo.toml  README.md  run.sh  rust-toolchain.toml
minimal-uefi-app/.devcontainer/: devcontainer.json
minimal-uefi-app/src/: main.rs
my-blink/: Cargo.toml  README.md
my-blink/.cargo/: config
my-blink/src/: main.rs
my-blink/support/: Cargo.toml
my-blink/support/src/: lib.rs
nodejs-express-with-cookie/: index.js  package-lock.json  package.json
proto-cli/: main.js  package-lock.json  package.json
proto-cli/template/: index.js  package.json
python-mcmc/: .gitignore  README.md  bayesian-glm.py  plot-test.py
ruby-matrix-vector-basic/: Gemfile  README.md  basic.rb  lr.rb  pca.rb
ruby-matrix-vector-basic/data/: airquality.txt  cars.txt  iris.txt  tests.tsv
simple-scotty-webapp/: LICENSE  simple-scotty-webapp.cabal
simple-scotty-webapp/public/: index.html  main.css
simple-scotty-webapp/src/: Main.hs
simple-scotty-webapp/src/Memo/: App.hs  Model.hs
try-chainer/: .gitignore  Pipfile  README.md  imports.py  requirements.in  requirements.txt
try-chainer/chapter03/: mychain.py
try-chainer/chapter04/: gen-iris-datasets.py  iris0.py  iris1.py  iris3.py  logistic.py
try-chainer/chapter04/impls/: basic.py  logistic.py  softmax.py
try-chainer/chapter05/: ae.py  dae.py
try-chainer/chapter06/: word2vec.py
try-chainer/chapter07/: eval-gru.py  eval-lstm0.py  eval-lstm0a.py  eval-lstm1.py  eval-lstm2.py  eval-rnn.py  gru.py  lstm0.py  lstm0a.py  lstm1.py  lstm2.py  rnn.py
try-chainer/chapter07/impls/: from_scratch.py  from_scratch_old.py  helpers.py  rnn.py  use_gru.py  use_lstm.py  with_dropout.py
try-chainer/chapter08/: test-attention.py  test-mt.py  train-attention.py  train-mt.py
try-chainer/chapter09/: caffe.py
try-electron/: .gitignore  Gruntfile.coffee  README.mkd  bower.json  package.json
try-electron/src/: index.html  index.js  jquery-loader.js  main.js  test.js
try-fay/: Gruntfile.coffee  README.mkd  package.json
try-fay/app/: index.html
try-fay/src/: App.hs
try-haskell-servant-auth/: .gitignore  LICENSE  README.md  try-haskell-servant-auth.cabal
try-haskell-servant-auth/src/: Lib.hs
try-haxe/: Gruntfile.coffee  package.json
try-haxe/app/: index.html
try-haxe/src/: App.hx
try-hubot/: README.mkd  memo.mkd
try-hubot/ansible/: local  site.yml
try-hubot/test/: package.json
try-hubot/test-server/: .gitignore  LICENSE  test-server.cabal
try-hubot/test-server/src/Memo/: App.hs  Model.hs
try-js-frameworks/: .gitignore  Gruntfile.coffee  README.mkd  bower.json  package.json  try-js-frameworks.cabal
try-js-frameworks/app/vue/: home.html  home.js
try-js-frameworks/app/vue/components/: all.html
try-js-frameworks/app/vue/js/: home.js
try-js-frameworks/src/: Main.hs
try-js-frameworks/src/Memo/: App.hs  Model.hs
try-nix/: Dockerfile
try-npm-workspace-with-ts/: .gitignore  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
try-purescript/: .gitignore  Gruntfile.coffee  README.mkd  bower.json  package.json
try-purescript-jquery/: .gitignore  Gruntfile.coffee  README.mkd  bower.json  package.json
try-purescript-jquery/app/: index.html
try-purescript-jquery/src/: App.purs
try-purescript/app/: index.html
try-purescript/src/: App.purs  Hello.purs  Math.purs  PhoneBook.purs
try-react-and-redux/1/: README.md  package.json  webpack.config.js
try-react-and-redux/2/: README.md  package.json  webpack.config.js
try-react-and-redux/3/: README.md  package.json  webpack.config.js
try-react-and-redux/4/: README.md  package.json  webpack.config.js
try-react-recoil/: package-lock.json  package.json
try-react-recoil/src/: App.tsx  CharacterCounter.tsx  TodoList.tsx  todoStores.tsx
try-rust-nom/: Cargo.toml
try-rust-nom/src/: json.rs  main.rs
try-rust-rocket/: Cargo.toml
try-rust-tokio/: .gitignore  Cargo.toml
try-rust-tokio/examples/: hello.rs  io_file.rs
try-rust-tokio/src/: main.rs
try-typescript/: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json
try-typescript/src/: allow-js.ts  use-express.ts  use-node.ts  use-ts.js  use-types.ts
try-webpack-and-babel/: README.md  package.json  webpack.config.js
try-webpack-and-babel/src/: app.js  cats.js.bak  cats.json  cats.yml  person.js
use-express-openid-connect/: .gitignore  index.js  package-lock.json  package.json
(+34 files in other folders)
