name:                practice
version:             0.1.0.0
-- synopsis:
-- description:
homepage:             https://github.com/krdlab/examples/tree/master/20180413-tdd-and-mob#readme
license:              BSD3
license-file:         LICENSE
author:               Sho Kuroda
maintainer:           krdlab@gmail.com
copyright:            (c) 2018 Sho Kuroda
category:             Web
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   README.md

library
  hs-source-dirs:     src
  exposed-modules:    Odai_1
                    , Odai_2
                    , Odai_2_1
                    , Odai_2_2
                    , Odai_2_3
                    , Odai_2_4
  build-depends:      base >= 4.7 && < 5
  default-language:   Haskell2010

test-suite doctest
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            doctest-discover.hs
  build-depends:      base
                    , practice
                    , doctest
  ghc-options:        -threaded -rtsopts
  default-language:   Haskell2010

test-suite hspec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      Odai_1Spec
  build-depends:      base
                    , practice
                    , hspec
                    , QuickCheck
  ghc-options:        -threaded -rtsopts
  default-language:   Haskell2010
