name:                delimited-continuation
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              krdlab
maintainer:          krdlab@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  -- hs-source-dirs:      
  exposed-modules:
    Example
  -- other-modules:
  -- other-extensions:    
  build-depends:
      base >=4.6 && <4.7
    , transformers
    , CC-delcont
