name:                haskell-io-test
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              krdlab
maintainer:          krdlab@gmail.com
copyright:           (c) 2015 krdlab
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      ReadFile
    , MockServer
  -- other-modules:       
  -- other-extensions:    
  build-depends:
      base >=4.7 && <5
    , http-client
    , http-types
    , bytestring
    , mtl
    , transformers
    , exceptions
  -- hs-source-dirs:      
  default-language:    Haskell2010
