name:                haskell-servant-webapp
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/krdlab/examples/haskell-servant-webapp
license:             MIT
license-file:        LICENSE
author:              krdlab
maintainer:          krdlab@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable example-server
  main-is:
    Main.hs
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  -- other-modules:       
  -- other-extensions:    
  build-depends:
      base >=4.7 && <5
    , servant-server
    , wai
    , warp
    , time
    , transformers
    , aeson
    , text
    , servant-docs
    , stm
    , containers
