name:                try-haskell-servant-auth
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/krdlab/examples/tree/master/try-haskell-servant-auth#readme
license:             BSD3
license-file:        LICENSE
author:              Sho Kuroda
maintainer:          krdlab@gmail.com
copyright:           (c) 2017 Sho Kuroda
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

executable try-haskell-servant-auth-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , try-haskell-servant-auth
  default-language:    Haskell2010

test-suite try-haskell-servant-auth-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , try-haskell-servant-auth
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krdlab/examples/tree/master/try-haskell-servant-auth
