name:                test-server
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              krdlab
maintainer:          krdlab@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable test-server
  hs-source-dirs:
    src
  main-is:
    Main.hs
  default-language:
    Haskell2010
  -- other-modules:       
  other-extensions:
      OverloadedStrings
    , FlexibleContexts
    , FlexibleInstances
    , GADTs
    , TypeFamilies
    , DeriveGeneric
  build-depends:
      base >=4.6 && <4.7
    , text >=0.11 && <0.12
    , containers >=0.5 && <0.6
    , transformers >=0.3 && <0.4
    , aeson >=0.6 && <0.7
    , monad-logger >=0.3 && <0.4
    , scotty >=0.6 && <0.7
    , wai-extra

